[gd_scene load_steps=12 format=2]

[ext_resource path="res://Scripts/Game.gd" type="Script" id=1]
[ext_resource path="res://Assets/font48.tres" type="DynamicFont" id=2]
[ext_resource path="res://Assets/Textures/attack_indicator.png" type="Texture" id=3]
[ext_resource path="res://Assets/Textures/speed_indicator.png" type="Texture" id=4]
[ext_resource path="res://Assets/Textures/range_indicator.png" type="Texture" id=5]
[ext_resource path="res://Assets/font32.tres" type="DynamicFont" id=6]
[ext_resource path="res://Assets/heart.tres" type="Texture" id=7]
[ext_resource path="res://Assets/Textures/arrow.png" type="Texture" id=8]

[sub_resource type="Theme" id=1]
default_font = ExtResource( 2 )

[sub_resource type="Animation" id=2]
resource_name = "move"
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath(".:position")
tracks/0/interp = 2
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 1280, 75 ), Vector2( 1310, 75 ) ]
}

[sub_resource type="Theme" id=3]
default_font = ExtResource( 2 )

[node name="Game" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 2
script = ExtResource( 1 )

[node name="UI" type="CanvasLayer" parent="."]

[node name="Panel" type="Panel" parent="UI"]
editor/display_folded = true
anchor_left = 1.0
anchor_right = 1.0
margin_left = -277.0
margin_bottom = 1080.0

[node name="VBox" type="VBoxContainer" parent="UI/Panel"]
anchor_right = 1.0
anchor_bottom = 1.0

[node name="GridContainer" type="GridContainer" parent="UI/Panel/VBox"]
margin_right = 277.0
margin_bottom = 538.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_constants/hseparation = 0
columns = 2

[node name="VBoxContainer" type="VBoxContainer" parent="UI/Panel/VBox"]
margin_top = 542.0
margin_right = 277.0
margin_bottom = 1080.0
size_flags_horizontal = 3
size_flags_vertical = 3
theme = SubResource( 1 )

[node name="HBoxContainer" type="HBoxContainer" parent="UI/Panel/VBox/VBoxContainer"]
margin_right = 277.0
margin_bottom = 64.0

[node name="DamageTexture" type="TextureRect" parent="UI/Panel/VBox/VBoxContainer/HBoxContainer"]
margin_right = 273.0
margin_bottom = 64.0
size_flags_horizontal = 3
texture = ExtResource( 3 )

[node name="DamageLabel" type="Label" parent="UI/Panel/VBox/VBoxContainer/HBoxContainer"]
margin_left = 277.0
margin_top = 7.0
margin_right = 277.0
margin_bottom = 56.0

[node name="HBoxContainer2" type="HBoxContainer" parent="UI/Panel/VBox/VBoxContainer"]
margin_top = 68.0
margin_right = 277.0
margin_bottom = 132.0

[node name="SpeedTexture" type="TextureRect" parent="UI/Panel/VBox/VBoxContainer/HBoxContainer2"]
margin_right = 273.0
margin_bottom = 64.0
size_flags_horizontal = 3
texture = ExtResource( 4 )

[node name="SpeedLabel" type="Label" parent="UI/Panel/VBox/VBoxContainer/HBoxContainer2"]
margin_left = 277.0
margin_top = 7.0
margin_right = 277.0
margin_bottom = 56.0

[node name="HBoxContainer3" type="HBoxContainer" parent="UI/Panel/VBox/VBoxContainer"]
margin_top = 136.0
margin_right = 277.0
margin_bottom = 200.0

[node name="RangeTexture" type="TextureRect" parent="UI/Panel/VBox/VBoxContainer/HBoxContainer3"]
margin_right = 273.0
margin_bottom = 64.0
size_flags_horizontal = 3
texture = ExtResource( 5 )

[node name="RangeLabel" type="Label" parent="UI/Panel/VBox/VBoxContainer/HBoxContainer3"]
margin_left = 277.0
margin_top = 7.0
margin_right = 277.0
margin_bottom = 56.0

[node name="UpgradeButton" type="Button" parent="UI/Panel/VBox/VBoxContainer"]
margin_top = 204.0
margin_right = 277.0
margin_bottom = 243.0
focus_mode = 0
custom_fonts/font = ExtResource( 6 )
disabled = true
text = "UPGRADE"

[node name="SellButton" type="Button" parent="UI/Panel/VBox/VBoxContainer"]
margin_top = 247.0
margin_right = 277.0
margin_bottom = 286.0
focus_mode = 0
custom_fonts/font = ExtResource( 6 )
disabled = true
text = "SELL"

[node name="StartWaveButton" type="Button" parent="UI/Panel/VBox/VBoxContainer"]
margin_top = 290.0
margin_right = 277.0
margin_bottom = 538.0
focus_mode = 0
size_flags_vertical = 3
custom_fonts/font = ExtResource( 6 )
text = "START WAVE 1"

[node name="HeartSprite" type="Sprite" parent="UI"]
position = Vector2( 49.5742, 54.6855 )
scale = Vector2( 0.5, 0.5 )
texture = ExtResource( 7 )

[node name="HeartLabel" type="Label" parent="UI"]
margin_left = 89.6087
margin_top = 29.2202
margin_right = 167.609
margin_bottom = 78.2202
custom_fonts/font = ExtResource( 2 )
text = "100"

[node name="CancelLabel" type="Label" parent="UI"]
visible = false
anchor_left = 0.5
anchor_right = 0.5
margin_left = -194.0
margin_top = 32.0
margin_right = 194.0
margin_bottom = 81.0
custom_fonts/font = ExtResource( 2 )
text = "ESCAPE  TO  CANCEL"

[node name="ArrowIndicator" type="Sprite" parent="UI"]
position = Vector2( 1280, 75 )
texture = ExtResource( 8 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="UI/ArrowIndicator"]
autoplay = "move"
anims/move = SubResource( 2 )

[node name="GameWinUI" type="Control" parent="UI"]
pause_mode = 2
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
theme = SubResource( 3 )

[node name="ColorRect" type="ColorRect" parent="UI/GameWinUI"]
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0, 0, 0, 0.392157 )

[node name="VBoxContainer" type="VBoxContainer" parent="UI/GameWinUI"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -419.0
margin_top = -344.5
margin_right = 419.0
margin_bottom = 344.5

[node name="Label" type="Label" parent="UI/GameWinUI/VBoxContainer"]
margin_right = 838.0
margin_bottom = 153.0
text = "You  won! 
But you  can  keep  playing  and  see  how  far 
you  get!"

[node name="ContinueButton" type="Button" parent="UI/GameWinUI/VBoxContainer"]
margin_top = 157.0
margin_right = 838.0
margin_bottom = 212.0
text = "Continue"

[node name="ExitButton" type="Button" parent="UI/GameWinUI/VBoxContainer"]
margin_top = 216.0
margin_right = 838.0
margin_bottom = 271.0
text = "Exit"

